# treasury-intent-controller

./: .gitignore  CONTRACT-DURABILITY.md  CONTRACT-SCORER.md  CONTRACT-V2.md  CONTRACT.md  README.md  go.mod
cmd/server/: main.go  main_test.go
contract/scorer/: request-fail.json  request-hashes-present.json  request-pass.json  request-unevaluable-unknown-criterion.json  request-volatile-dispatch.json  response-fail.json  response-hashes-present.json  response-pass.json  response-unevaluable-unknown-criterion.json  response-volatile-dispatch.json
docs/: 2026-07-05-tic-concept-chat-design.md  2026-07-06-tic-concept-chat-plan.md
docs/handoff/: 2026-07-13-atlas-treasury-payment-loop.md  HANDOFF.md
docs/learnings/: 2026-07-13-atlas-verification-env-is-kind-shaped.md  2026-07-13-contract-test-equality-blindspot.md  2026-07-13-refuted-localhost-ipv6-hypothesis.md  2026-07-13-tic-scorer-url-full-endpoint.md  2026-07-13-wheel-lane-import-name-bug.md  2026-07-13-wsl-userspace-wheel-toolchain.md  2026-07-14-payment-loop-live-probe-with-controls.md  2026-07-14-wheel-lane-count-corrected.md  2026-07-14-wheel-lane-depends-on-sibling-checkout-state.md  LEARNINGS.md
internal/adapter/: adapter.go  adapter_test.go
internal/audit/: eventlog.go  eventlog_test.go
internal/durable/: store.go  store_test.go
internal/gate/: acceptance_test.go  (+1 more)
scorer/: README.md  pyproject.toml
scorer/src/tis/: __init__.py  __main__.py  app.py  evaluator.py  facts.py  models.py  resolver.py
scorer/tests/: test_app.py  test_evaluator.py  test_fixtures.py  test_main_config.py  test_resolver.py
(+8 files in other folders)
